php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #27809 ftp_systype returns null
Submitted: 2004-03-31 13:44 UTC Modified: 2004-03-31 15:34 UTC
From: jesse dot binam at simplot dot com Assigned:
Status: Closed Package: FTP related
PHP Version: 4.3.5 OS: Any
Private report: No CVE-ID: None
 [2004-03-31 13:44 UTC] jesse dot binam at simplot dot com
Description:
------------
When using ftp_systype() while connected to a AS/400 (V5R2M0 in my case) returns null.

Reproduce code:
---------------
<?php

$fc = ftp_connect('as400server');
$login = ftp_login($fc,'username','password');
$systype = ftp_systype($fc);
echo $systype;

?>

Expected result:
----------------
I expect the output to be
'OS/400'

Actual result:
--------------
a null value

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2004-03-31 14:06 UTC] iliaa@php.net
What does SYST command return on your FTP server? The php's 
ftp_systype() is pretty much a wrapper around execution of 
SYST and fetching the response. 
 [2004-03-31 14:21 UTC] jesse dot binam at simplot dot com
ftp> quote SYST
215  OS/400 is the remote operating system. The TCP/IP version is "V5R2M0".
 [2004-03-31 14:28 UTC] iliaa@php.net
Please try the following patch and see if it resolves the 
problem. 
 
Index: ftp.c 
=================================================================== 
RCS file: /repository/php-src/ext/ftp/ftp.c,v 
retrieving revision 1.102 
diff -u -3 -p -r1.102 ftp.c 
--- ftp.c       18 Mar 2004 17:12:07 -0000      1.102 
+++ ftp.c       31 Mar 2004 19:37:38 -0000 
@@ -394,6 +394,9 @@ ftp_syst(ftpbuf_t *ftp) 
                return NULL; 
        } 
        syst = ftp->inbuf; 
+       while (*syst == ' ') { 
+               syst++; 
+       } 
        if ((end = strchr(syst, ' '))) { 
                *end = 0; 
        } 
 
 [2004-03-31 15:15 UTC] jesse dot binam at simplot dot com
Sweet! That fixed it. Sorry it took so long, I at some point must have done a make clean and my system isn't the fastest.
 [2004-03-31 15:34 UTC] iliaa@php.net
This bug has been fixed in CVS.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sun Sep 27 12:00:02 2026 UTC