Fixed bug #27809 (ftp_systype returns null on some ftp servers).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@155091 c90b9560-bf6c-de11-be94-00142212c4b1